--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "web-app-practice",
   "main": "index.js",
   "scripts": {
-    "dev": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/theneonwhale/web-app-practice#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
